# focal

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  account-edit-dialog.c  accounts-dialog.c  async-curl.c  async-curl.h  caldav-calendar.c  caldav-calendar.h  caldav-client.c  caldav-client.h  calendar-config.c  calendar-config.h  calendar.c  calendar.h  event-panel.c  event-panel.h  event-private.c  event-private.h  focal.suppression  local-calendar.c  local-calendar.h  main.c  remote-calendar.c  remote-calendar.h  rpc.c  rpc.h  week-view.c  week-view.h
res/: focal.desktop
src/: account-edit-dialog.c  account-edit-dialog.h  accounts-dialog.c  accounts-dialog.h  app-header.c  app-header.h  async-curl.c  async-curl.h  caldav-calendar.c  caldav-calendar.h  calendar-collection.c  calendar-collection.h  calendar-config.c  calendar-config.h  calendar.c  calendar.h  cell-renderer-attendee-action.c  cell-renderer-attendee-action.h  cell-renderer-attendee-partstat.c  cell-renderer-attendee-partstat.h  date-selector-button.c  date-selector-button.h  event-panel.c  event-panel.h  event-popup.c  event-popup.h  event-private.h  event.c  event.h  ics-calendar.c  ics-calendar.h  local-calendar.c  local-calendar.h  main.c  memory-calendar.c  memory-calendar.h  oauth2-provider-google.c  oauth2-provider-google.h  oauth2-provider-outlook.c  oauth2-provider-outlook.h  (+18 more)
